--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -10,134 +11,167 @@
 
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
-  </head>
+</head>
 
-  <body>
+<body>
+    <canvas id="canvas"></canvas>
+    <button id="send">送信</button>
+    <div><img id="output"></div>
+
+    <!-- <div>
+        名前：<input type="text" id="uname">
+    </div>
+    <div>
+        <textarea id="text" cols="30" rows="10"></textarea>
+        <button id="send">送信</button>
+    </div>
+    <div id="output" style="overflow: auto;height: 300px;"></div>
+    </div> -->
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script type="module">
-//###############################################
-// 必要なJSを読み込み
-//###############################################
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.4.1/firebase-app.js";
-import { getDatabase, ref, push, set, onChildAdded, remove, onChildRemoved } from "https://www.gstatic.com/firebasejs/9.4.1/firebase-database.js";
-import { getAuth, signInWithPopup, GoogleAuthProvider, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.4.1/firebase-auth.js";
+    <script type="module">
+        //###############################################
+        // 必要なJSを読み込み
+        //###############################################
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.4.1/firebase-app.js";
+        import { getDatabase, ref, push, set, onChildAdded, remove, onChildRemoved } from "https://www.gstatic.com/firebasejs/9.4.1/firebase-database.js";
+        import { getAuth, signInWithPopup, GoogleAuthProvider, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.4.1/firebase-auth.js";
 
 
-//###############################################
-//FirebaseConfig
-//###############################################
-const firebaseConfig = {
-  apiKey: "AIzaSyBBh6lnW2zg27qVJF6xtrW_uWFv-xxpq1s",
-    authDomain: "jssensyuken.firebaseapp.com",
-    databaseURL: "https://jssensyuken-default-rtdb.firebaseio.com",
-    projectId: "jssensyuken",
-    storageBucket: "jssensyuken.appspot.com",
-    messagingSenderId: "588427069682",
-    appId: "1:588427069682:web:b01b00bb7c1ee9d713a86b"
-};
-const app = initializeApp(firebaseConfig);
+        //###############################################
+        //FirebaseConfig
+        //###############################################
+        const firebaseConfig = {
+            apiKey: "AIzaSyBBh6lnW2zg27qVJF6xtrW_uWFv-xxpq1s",
+            authDomain: "jssensyuken.firebaseapp.com",
+            databaseURL: "https://jssensyuken-default-rtdb.firebaseio.com",
+            projectId: "jssensyuken",
+            storageBucket: "jssensyuken.appspot.com",
+            messagingSenderId: "588427069682",
+            appId: "1:588427069682:web:b01b00bb7c1ee9d713a86b"
+        };
+        const app = initializeApp(firebaseConfig);
 
 
-//###############################################
-//Firebase-RealtimeDatabase接続
-//###############################################
-const db  = getDatabase(app); //RealtimeDBに接続
+        //###############################################
+        //Firebase-RealtimeDatabase接続
+        //###############################################
+        const db = getDatabase(app); //RealtimeDBに接続
 
 
-//###############################################
-//GoogleAuth用
-//###############################################
-const provider = new GoogleAuthProvider();
-provider.addScope('https://www.googleapis.com/auth/contacts.readonly');
-const auth = getAuth();
+        //###############################################
+        //GoogleAuth用
+        //###############################################
+        const provider = new GoogleAuthProvider();
+        provider.addScope('https://www.googleapis.com/auth/contacts.readonly');
+        const auth = getAuth();
 
 
-//###############################################
-//Loginしていれば処理します
-//###############################################
-onAuthStateChanged(auth, (user) => {
-    if (user) {
-        // User is signed in, see docs for a list of available properties
-        // https://firebase.google.com/docs/reference/js/firebase.User
-        const uid = user.uid;
-        const dbRef = ref(db,"users/"+uid+"/chat"); //RealtimeDB内の"chat"を使う
+        //###############################################
+        //Loginしていれば処理します
+        //###############################################
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                // User is signed in, see docs for a list of available properties
+                // https://firebase.google.com/docs/reference/js/firebase.User
+                const uid = user.uid;
+                const dbRef = ref(db, "users/" + uid + "/JSsensyuken"); //RealtimeDB内の"chat"を使う
 
-        //ユーザー情報取得できます
-        if (user !== null) {
-            user.providerData.forEach((profile) => {
-                console.log("Sign-in provider: " + profile.providerId);
-                console.log("  Provider-specific UID: " + profile.uid);
-                console.log("  Name: " + profile.displayName);
-                console.log("  Email: " + profile.email);
-                console.log("  Photo URL: " + profile.photoURL);
+
+                // const canvas = document.getElementById("canvas");
+                // const ctx = canvas.getContext("2d");
+
+                // function chgImg(){
+                //     const png = canvas.toDataURL();
+                //     document.getElementById("output").src = png;
+                // }
+
+
+
+                //ユーザー情報取得できます
+                if (user !== null) {
+                    user.providerData.forEach((profile) => {
+                        console.log("Sign-in provider: " + profile.providerId);
+                        console.log("  Provider-specific UID: " + profile.uid);
+                        console.log("  Name: " + profile.displayName);
+                        console.log("  Email: " + profile.email);
+                        console.log("  Photo URL: " + profile.photoURL);
+                    });
+                }
+
+
+                // $("#send").on("click", function () {
+                //     const msg = {
+                //         uname: $("#uname").val(),
+                //         text: $("#text").val()
+                //     }
+                //     const newPostRef = push(dbRef); //Pushできる状況を作って
+                //     set(newPostRef, msg);           //DBに値をセットする
+                // });
+
+                $("#send").on("click", function(){
+                const canArt = document.getElementById("canvas");
+                const img = canArt.toDataURL("img/png");
+                console.log(img);
+                const newPostRef = push(dbRef);
+                set(newPostRef,img);
+                })
+
+                // $("#send").on("click", function(){
+                //     const canArt = $("#canvas").getContext( "2d" );
+                //     const img = canArt.toDataURL("img/png");
+                //     console.log("img");
+                // })
+                // const canArt = document.getElementById("canvas");
+                // const img = canArt.toDataURL("img/png");
+                // console.log("img");
+
+
+                //最初にデータ取得＆onSnapshotでリアルタイムにデータを取得
+                onChildAdded(dbRef, function (data) {
+                    // chgImg();
+                    const msg = data.val();    //オブジェクトデータを取得し、変数msgに代入
+                    const key = data.key;      //データのユニークキー（削除や更新に使用可能）
+                    //表示用テキスト・HTMLを作成
+                    let h = '<p>';
+                    h += msg.uname;
+                    h += '<br>';
+                    h += msg.text;
+                    h += '</p>';
+                    $("#output").append(h); //#outputの最後に追加
+                });
+
+            } else {
+                _redirect();  // User is signed out
+            }
+        });
+
+
+        //###############################################
+        //Logout処理
+        //###############################################
+        $("#out").on("click", function () {
+            // signInWithRedirect(auth, provider);ß
+            signOut(auth).then(() => {
+                // Sign-out successful.
+                _redirect();
+            }).catch((error) => {
+                // An error happened.
+                console.error(error);
             });
+        });
+
+
+        //###############################################
+        //Login画面へ
+        //###############################################
+        function _redirect() {
+            location.href = "login.html";
         }
 
-        //データ登録(Click)
-        $("#send").on("click",function() {
-            const msg = {
-                uname: $("#uname").val(),
-                text: $("#text").val()
-            }
-            const newPostRef = push(dbRef); //Pushできる状況を作って
-            set(newPostRef, msg);           //DBに値をセットする
-        });
-
-        //データ登録(Enter)
-        $("#text").on("keydown",function(e){
-            console.log(e);        //e変数の中身を確認！！
-            if(e.keyCode == 13){   //EnterKey=13
-                const msg = {
-                    uname: $("#uname").val(),
-                    text: $("#text").val()
-                }
-                const newPostRef = push(dbRef); //Pushできる状況を作って
-                set(newPostRef, msg);           //DB"chat"にオブジェクトデータをセット
-            }
-        });
-
-        //最初にデータ取得＆onSnapshotでリアルタイムにデータを取得
-        onChildAdded(dbRef, function(data){   
-            const msg  = data.val();    //オブジェクトデータを取得し、変数msgに代入
-            const key  = data.key;      //データのユニークキー（削除や更新に使用可能）
-            //表示用テキスト・HTMLを作成
-            let h = '<p>';
-                h += msg.uname;
-                h += '<br>';
-                h += msg.text;
-                h += '</p>';
-                $("#output").append(h); //#outputの最後に追加
-        });
-
-    } else {
-        _redirect();  // User is signed out
-    }
-});
-
-
-//###############################################
-//Logout処理
-//###############################################
-$("#out").on("click", function () {
-    // signInWithRedirect(auth, provider);ß
-    signOut(auth).then(() => {
-        // Sign-out successful.
-        _redirect();
-    }).catch((error) => {
-        // An error happened.
-        console.error(error);
-    });
-});
-
-
-//###############################################
-//Login画面へ
-//###############################################
-function _redirect(){
-    location.href="login.html";
-}
-
-</script>
+    </script>
     <script src="sketch.js"></script>
-  </body>
+</body>
+
 </html>
